# rigid

./: LICENSE  README.md  taka-architecture.md  taka-description.md  taka-ui-spec.md
.github/workflows/: release.yml
app/: .gitignore  biome.json  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
app/src-tauri/: .taurignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
app/src-tauri/binaries/: .gitignore
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/scripts/: download-ffmpeg.sh
app/src-tauri/src/: error.rs  ffmpeg.rs  lib.rs  main.rs
app/src-tauri/src/adapters/: mod.rs
app/src-tauri/src/adapters/ai/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  traits.rs  types.rs
app/src-tauri/src/commands/: ai.rs  apps.rs  architecture_docs.rs  capture.rs  checklist.rs  demos.rs  diagrams.rs  documents.rs  features.rs  issues.rs  mod.rs  recordings.rs  screenshots.rs  settings.rs  tags.rs  tests.rs  video.rs
app/src-tauri/src/db/: mod.rs  schema.sql
app/src-tauri/src/models/: app.rs  architecture_doc.rs  checklist.rs  demo.rs  diagram.rs  document.rs  feature.rs  issue.rs  mod.rs  recording.rs  screenshot.rs  settings.rs  tag.rs  test.rs
app/src-tauri/src/native/: fallback.rs  macos.rs  mod.rs
app/src-tauri/src/repositories/: app_repo.rs  architecture_doc_repo.rs  checklist_repo.rs  demo_repo.rs  diagram_repo.rs  document_repo.rs  feature_repo.rs  issue_repo.rs  mod.rs  recording_repo.rs  screenshot_repo.rs  settings_repo.rs  tag_repo.rs  test_repo.rs
app/src-tauri/src/services/: ai.rs  mod.rs
app/src-tauri/src/utils/: crypto.rs  mod.rs
app/src-tauri/swift/: Package.swift
app/src-tauri/swift/Sources/RigidCaptureKit/: RigidCaptureKit.swift  ScreenRecorder.swift  ScreenshotCapture.swift  VideoCompositor.swift  WebcamRecorder.swift  WindowEnumerator.swift
app/src-tauri/swift/Sources/RigidCaptureKit/include/: RigidCaptureKit.h
app/src-tauri/swift/Sources/TakaCaptureKit/: ScreenRecorder.swift  ScreenshotCapture.swift  TakaCaptureKit.swift  VideoCompositor.swift  WebcamRecorder.swift  WindowEnumerator.swift
app/src-tauri/swift/Sources/TakaCaptureKit/include/: TakaCaptureKit.h
app/tests/: setup.ts
brand/: rigid-motion-system.jsx
docs/: RFC-INSTALLABLE-THEMING-SYSTEM.md
landing/: package.json  pnpm-lock.yaml  tsconfig.json
(+171 files in other folders)
